@startuml

title __BUILDER's Class Diagram__\n

  namespace project {
    namespace Builder {
      interface project.Builder.Builder {
          {abstract} + buildId()
          {abstract} + buildKurier()
          {abstract} + buildOddzial()
          {abstract} + buildProperties()
          {abstract} + buildStatus()
          {abstract} + getResult()
      }
    }
  }
  

  namespace project {
    namespace Builder {
      class project.Builder.Director {
          + Director()
          + getZlecenieAdresyIlosc()
          + getZlecenieAdresyStatus()
          + getZlecenieOddzialy()
          + getZlecenieStatusKurier()
          + setBuilder()
      }
    }
  }
  

  namespace project {
    namespace Builder {
      class project.Builder.ZlecenieBuilder {
          + buildId()
          + buildKurier()
          + buildOddzial()
          + buildProperties()
          + buildStatus()
          + getResult()
      }
    }
  }
  

  namespace project {
    namespace Builder {
      class project.Builder.ZlecenieProduct {
          + AdresKoncowy : String
          + AdresPoczatkowy : String
          + DataNadania : String
          + ID : int
          + Ilosc : int
          + Kurier : String
          + oddzialKoncowy : String
          + oddzialPoczatkowy : String
          + status : String
          + getAdresKoncowy()
          + getAdresPoczatkowy()
          + getDataNadania()
          + getID()
          + getIlosc()
          + getKurier()
          + getOddzialKoncowy()
          + getOddzialPoczatkowy()
          + getStatus()
          + setAdresKoncowy()
          + setAdresPoczatkowy()
          + setDataNadania()
          + setID()
          + setIlosc()
          + setKurier()
          + setOddzialKoncowy()
          + setOddzialPoczatkowy()
          + setStatus()
      }
    }
  }
  

  project.Builder.Director o-- project.Builder.Builder : builder
  project.Builder.ZlecenieBuilder .up.|> project.Builder.Builder
  project.Builder.ZlecenieBuilder o-- project.Builder.ZlecenieProduct : zlecenie


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
